# Swarm-100

./: .gitignore  AI_first_swarm_launch.yaml  CITATION.cff  LICENSE  README.yaml  REALITY_CHECK.md  build_z8_swarm.sh  conway_web_portal_plan.md  deployment_plan.yaml  experiment_10x10_ca_20251019_120757.yaml  fault_tolerance_protocol.yaml  glider_test_results.json  lora_pulse_injector.py  project.yaml  quickstart.sh  simple_glider_test.py  start_swarm.py  swarm100_validation_protocol.yaml  swarm_dashboard.py  swarm_evolution_plan.yaml  test_cybergrid_glider.py  test_pulsing_ca.py  validation_progress.yaml  validation_results.yaml  visualize_energy_propagation.py
bots/: swarm_state.yaml
configs/: gemma3-zombie-swarm.yaml  params_alpha_sigma.yaml  swarm_config.yaml
configs_backup_1760884473/: bot_template.yaml  gemma3-zombie-swarm.yaml
data/: aggregated_results.csv
docs/: .alice_in_cyberland.story  CHANGELOG.md  ai_first_validation_pipeline.yaml  architecture_review_report.yaml  ca_experimentation_plan.yaml  ca_experimentation_results.md  critical_testing_review.yaml  cybergrid-glider-test-guide.md  grok_workflow.yaml  research_publication_draft.md  statistical_enhancement_summary.md  statistical_validation_appendix.md  swarm100_first_data_review.md  swarm_hypervisor_plan.yaml  testing_improvement_plan.yaml
exported-assets/: granite4-swarm-setup.md  granite4_swarm_file_manifest.csv  script.py  script_1.py  script_2.py  script_3.py  script_4.py  script_5.py
scripts/: activate_agent_ecosystem.py  ai_validate_pipeline.py  analyze_ca_metrics.py  analyze_replications.py  bot_worker.py  bot_worker_zombie.py  collect_ca_metrics.py  fault_injection_test.py  global_tick.py  health_monitor.py  launch_swarm.py  pattern_reconstruction_test.py  perturbation_resilience_test.py  rule_engine.py  run_10x10_ca_experiment.py  run_ca_experimentation.py  run_large_swarm.py  statistical_replication_test.py  stop_swarm.sh  swarm_coordinator_client.py  swarm_debug_analyzer.py  swarm_debug_usage_example.sh  swarm_monitor.py  swarm_service_coordinator.py  swarm_supervisor.py  test_swarm.py  tracing_setup.py  update_results_md.py  validate_phases.py  zombie_supervisor.py
stats_replication/: statistical_analysis_20251019_140404.yaml  statistical_summary_20251019_140404.json
swarm-core/: CMakeLists.txt  CMakeLists_Z8.txt  README.md  build_swarm_core.sh  validation_results.yaml  validation_runner.py  validation_workflow.yaml
swarm-core/bindings/: pybind_module.cpp
swarm-core/include/: cyber_grid.hpp  emergence_analyzer.hpp  root_cause_analyzer.hpp
swarm-core/src/: cyber_grid.cpp  emergence_analyzer.cpp  root_cause_analyzer.cpp
swarm-core/tests/: test_root_cause_analyzer.py
swarm_testing_env/: pyvenv.cfg
tests/: __init__.py  test_adaptive_rl_communication.py  test_baseline_performance.py  test_emergent_resilience_benchmarking.py  test_failure_recovery_scenarios.py  test_hardware_timing.py  (+6 more)
(+9 files in other folders)
